force-app/main/default/objects/WorkOrder/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Finishing</valueSetName>
    </valueSet>
</CustomField>