force-app/main/default/objects/WorkOrder/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Work Orders Materials</relationshipLabel>
    <relationshipName>Work_Order_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>