force-app/main/default/objects/WorkOrder/fields/PackingSlip__c.field-meta.xml
<CustomField>
    <fullName>PackingSlip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing Slip</label>
    <referenceTo>PackingSlip__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>