force-app/main/default/objects/WorkOrder/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>OrderProduct__r.Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>