force-app/main/default/objects/WorkOrder/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOP</label>
    <referenceTo>SOP__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>